fix: spacing getallen

--- a/style/styles.css
+++ b/style/styles.css
@@ -357,7 +357,7 @@ body {
 
 .donation-numbers {
   display: flex;
-  gap: 1rem;
+  gap: 0.7rem;
   font-family: 'Sirenia', serif;
   font-size: 1.5rem;
   color: #183A36;
